<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:gravity="center"
   android:padding="30dip">
   <TextView
      android:text="@string/trickiestpart_label"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
		<Button
			android:id="@+id/trickiestpart_detect_crunches"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/detect_crunches_label" />
		<Button
		    android:id="@+id/trickiestpart_record_audio"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/record_audio_label"/>
		<Button
		    android:id="@+id/trickiestpart_take_picture"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/take_picture_label"/>
		<Button
		    android:id="@+id/trickiestpart_ack"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/acknowledgements_label"/>
		<Button
			android:id="@+id/exit_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/exit_label" />
</LinearLayout>