<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal" >
<LinearLayout
	android:orientation="vertical"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:layout_gravity="center" >
<Button
	android:id="@+id/about_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/about_label" />
<Button
	android:id="@+id/error_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/error_label" />
<Button
    android:id="@+id/sudoku_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/sudoku_label" />
<Button
	android:id="@+id/exit_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/exit_label" />
</LinearLayout>
</LinearLayout>
