<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal" >
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center" >
		<Button
			android:id="@+id/banana_new_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/new_game_label" />
		<Button
			android:id="@+id/banana_about_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/instructions_label" />
		<Button
			android:id="@+id/exit_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/exit_label" />
		<Button
		    android:id="@+id/banana_acknowledgements_button"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/acknowledgements_label"/>
	</LinearLayout>
</LinearLayout>