<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/twoplayer_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/twoplayer_register_button"
        android:onClick="onClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/register_label" />
    
    <Button
        android:id="@+id/next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_label" />
    
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/exit_label" />
    

</LinearLayout>
