<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="vertical" >

	<TextView
	    android:id="@+id/banana_finish_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/banana_finish_text" />	
	<Button
	    android:id="@+id/banana_play_again_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/play_again_label" />
	<Button
        android:id="@+id/banana_quit_button"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:text="@string/exit_label" />

</LinearLayout>
