<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal" >
<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center" >
		<Button
			android:id="@+id/single_player_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/single_player_label" />
		<Button
		    android:id="@+id/multi_player_button"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/two_player_label"/>
		<Button
			android:id="@+id/exit_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/exit_label" />

	</LinearLayout>
</LinearLayout>