<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/communication_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/twoplayer_unregister_button"
        android:onClick="onClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/unregister_label" />
    
    <Button
        android:id="@+id/challenge_user_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/challenge_user_label" />
    
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/exit_label" />

</LinearLayout>
