<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/finalproject_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/finalproject_tutorial_features_text"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/crunchy_label"
        android:textSize="32dp" />

         <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" 
        android:layout_alignParentBottom="true">

        <TableRow>

            <Button
		        android:id="@+id/finalproject_back_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/back_label" />

            <Button
		        android:id="@+id/finalproject_next_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/next_label" />
        </TableRow>
    </TableLayout>

</RelativeLayout>